made new controls to mess with the playing of a sound so it will play faster or it will stutter

--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -11,6 +11,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <COMReference Include="WMPLib">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>1</VersionMajor>
+      <Guid>6bf52a50-394a-11d3-b153-00c04f79faa6</Guid>
+      <Lcid>0</Lcid>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FlaUI.Core" Version="4.0.0" />
     <PackageReference Include="FlaUI.UIA3" Version="4.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
@@ -22,6 +34,10 @@
 
   <ItemGroup>
     <Folder Include="TestTrack\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SmplPlyr\SmplPlyr.csproj" />
   </ItemGroup>
 
   <ItemGroup>
